[metadata]
name = qGitFilterBranch
version = 0.9
author = Julien Miotte
author_email = miotte.julien@gmail.com
summary = Python Qt4 frontend for git filter-branch.
description_file = README.rst
keywords = git, frontend, change dates, rewrite history
home_page = https://github.com/mike-perdide/qGitFilterBranch
project_url =
    Source repository,https://github.com/mike-perdide/qGitFilterBranch
requires_dist =
    GitPython (>0.3.0)
requires_python = 2.6.6
license = GPLv3
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Topic :: Software Development :: Version Control

[files]
packages =
    qGitFilterBranch
scripts =
    qGitFilterBranch/qGitFilterBranch
extra_files =
    setup.py
