[metadata]
name = gitbuster
version = 0.9b3
author = Julien Miotte
author_email = miotte.julien@gmail.com
summary = Python Qt4 frontend for git filter-branch.
description_file = README.rst
keywords = git, frontend, change dates, rewrite history
home_page = https://github.com/mike-perdide/gitbuster
project_url =
    Source repository,https://github.com/mike-perdide/gitbuster
requires_dist =
    gfbi_core (>=0.1)
requires_python = >=2.5
license = GPLv3
classifier =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU General Public License (GPL)
    Environment :: X11 Applications :: Qt
    Intended Audience :: Developers
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 2.6
    Topic :: Software Development :: Version Control

[files]
packages =
    gitbuster
scripts =
    gitbuster/gitbuster
extra_files =
    setup.cfg
    setup.py
    README.rst
    AUTHORS.txt
    demo.sh
    LICENSE.txt
    MANIFEST.in
