[metadata]
name = gfbi_core
version = 0.2
author = Julien Miotte
author_email = mike.perdide@gmail.com
summary = Core files for interactive git filter branch.
description_file = README.rst
keywords = git, change dates, rewrite history
home_page = https://github.com/mike-perdide/qfbi_core
project_url =
    Source repository,https://github.com/mike-perdide/qgfbi_core
requires_dist =
    GitPython (>0.3.0)
requires_python = >=2.5
license = GPLv3

[files]
packages =
    gfbi_core
extra_files =
    setup.cfg
    setup.py
    README.rst
    AUTHORS.txt
    LICENSE.txt
    MANIFEST.in
